cmake_minimum_required(VERSION 3.5)

project(uint256_t)

file(GLOB LIB_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.include")
file(GLOB LIB_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

SrcCodeGroup("${CMAKE_CURRENT_SOURCE_DIR}" "src")

list(APPEND LIB_PROJECT_FILES ${LIB_HEADER_FILES})
list(APPEND LIB_PROJECT_FILES ${LIB_SOURCE_FILES})

add_library(${PROJECT_NAME} STATIC ${LIB_PROJECT_FILES})
add_library(lib::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
